<resources>
    <string name="app_name">BookApp</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_create_now">Don\'t have account? <b>Create now</b> </string>
    <string name="welcome">Welcome</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="register">Register</string>
    <string name="search_category">Search Category</string>
    <string name="pick_category">Pick Category</string>
    <string name="add_new_book">Add New Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="quantity">Quantity</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="_13mp">13mp</string>
    <string name="category">Category</string>
    <string name="books">Books</string>
    <string name="update_book">Update Book</string>
    <string name="_21_january_2023">21 January 2023</string>
    <string name="six_crimson_cranes">Six Crimson Cranes</string>
    <string name="_100k">100K</string>
    <string name="_5_0">5.0</string>
    <string name="_967_00_mb">967.00 MB</string>
    <string name="des">Lorem ipsum dolor sit amet consectetur. Consectetur risus nulla iaculis ac faucibus lectus cras bibendum dignissim. Dolor turpis et euismod lacinia vitae amet quis. Ultrices morbi porttitor tortor lobortis ut turpis vestibulum. In etiam odio neque at sed consequat tristique quis. Nunc sit diam nibh vestibulum donec. Est volutpat nibh morbi aliquam gravida potenti. Sed tellus cursus sit leo viverra ut facilisi id. Eget mauris ipsum accumsan nunc nunc justo. Nec tristique nec elementum orci. Orci amet aliquet elit amet ornare aliquam porta pretium lectus. Nisi nisl mattis pulvinar dignissim tempus. In sit orci donec sem molestie quis placerat. Felis pulvinar turpis tristique nibh nunc integer lobortis. Mauris mauris arcu fusce fames. Rhoncus habitant mauris nisl aliquet. Felis ultrices malesuada commodo amet etiam sit.</string>
    <string name="read_book">Read Book</string>
    <string name="n_n">N/N</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="_0_1000">0/1000</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="_1">1</string>
    <string name="_130_000_vnd">130.000 VND</string>
    <string name="size_200_mb">Size : 200 MB</string>
    <string name="page_n_n">Page : N/N</string>
    <string name="c_programming_book_for_beginers">C++ programming book for beginers</string>
    <string name="profiles">Profile</string>
    <string name="erik_groetz">Erik Groetz</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_favorites_books">Your Favorites Books</string>
    <string name="name_of_user">Name Of User</string>
</resources>