<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_bottom_dialog">

    <RelativeLayout
        android:id="@+id/relaContent"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="130dp"
            android:layout_height="170dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/background">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="@id/pdfRl"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_toEndOf="@id/title"
            android:gravity="start"
            android:text="21/20/2023"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/pdfRl"
            android:text="@string/c_programming_book_for_beginers"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/pdfRl"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/pageTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/categoryTv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/pdfRl"
            android:text="@string/page_n_n"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/sizeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pageTv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/pdfRl"
            android:text="@string/size_200_mb"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/priceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sizeTv"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toStartOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/_130_000_vnd"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/relaContent"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/linerAdd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decreaseButton"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_fab"
                android:drawableStart="@drawable/ic_remove_24"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:id="@+id/countTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/increaseButton"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_fab"
                android:drawableStart="@drawable/ic_add_24"
                android:padding="@dimen/_8sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_10sdp"
            android:layout_toEndOf="@+id/linerAdd"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addToCart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/background_button01"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>