<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_toolbar">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/avatar"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/noAccount">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="225dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginEnd="@dimen/_30sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_input"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_14sdp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/inputpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/background_input"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12sdp"
                    android:textSize="@dimen/_14sdp"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPassword"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/background_button01"
                android:text="@string/sign_in" />

            <ImageButton
                android:id="@+id/backPress"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/background_fab"
                android:layout_below="@id/signIn"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription" />


        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/don_t_have_account_create_now"
        android:textColor="@color/black" />

</RelativeLayout>