<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardElevation="0dp"
    app:contentPadding="@dimen/_8sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/background">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="match_parent"
            android:layout_toStartOf="@id/showDialogCart"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/book_title"
            android:textColor="@color/primary" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="2"
            android:text="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:maxLines="1"
            android:text="@string/_13mp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="Price : 130.00VND"
            android:textColor="#D81B60" />

        <ImageButton
            android:id="@+id/showDialogCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_cart" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:maxLines="1"
            android:text="@string/dd_mm_yyyy" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>