<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_1sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="0dp"
    app:contentPadding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeAvt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_12sdp"
                android:src="@drawable/ic_avt"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/nameUserComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toStartOf="@+id/dateTv"
                android:layout_toEndOf="@id/profile_image"
                android:maxLines="1"
                android:text="@string/name_of_user"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/_21_january_2023"
                android:textColor="@color/gray_custom"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeAvt"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/book_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>